# agent-discover-scanner

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_NOTES.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_BADGES.txt  ROADMAP.md  action.yml  docker-compose.yml  install.sh  pyproject.toml
.claude/commands/: grow-scanner.md
.github/workflows/: ci.yml  scan.yml
demo/: run-demo.sh  setup.sh
demo/k8s/: agents-configmap.yaml  crewai-agent.yaml  langchain-agent.yaml  shadow-agent.yaml
demo/mcp-governance/: DESIGN.md  README.md  sample-policy.yaml
demo/sample-repo/: requirements.txt
demo/sample-repo/agents/: autogen_agent.py  crewai_agent.py  direct_client.py  langchain_agent.py  shadow_openai.py
deployment/kubernetes/: tracing-policy.yaml
deployment/systemd/: README.md  agent-discover-scanner.service
docs/: EXAMPLES.md  TETRAGON_SETUP.md  known-apps-example.txt  layer4-setup.md
docs/comparisons/: vs-grep.md  vs-nudge-security.md
docs/integrations/: elastic.md  github-actions.md  kubernetes-daemonset.md  splunk.md
examples/: tetragon-sample-events.json
examples/k8s/: test-workload.yaml
src/agent_discover_scanner/: __init__.py  aibom.py  audit_reports.py  behavioral_patterns.py  cli.py  correlator.py  errors.py  high_risk_agents.py  js_signatures.py  known_apps.py  mcp_detector.py  network_monitor.py  platform.py  saas_detector.py  sarif_output.py  sbom_analyzer.py  scan_runner.py  scanner.py  signatures.py  visitor.py
src/agent_discover_scanner/exporters/: mcpfw_policy.py
src/agent_discover_scanner/layer4/: osquery_executor.py  osquery_queries.py  result_parser.py
src/agent_discover_scanner/models/: endpoint_discovery.py
src/agent_discover_scanner/monitors/: __init__.py  agent-discover-scanner.code-workspace  json_output.py  k8s_monitor.py  tetragon_events.py  tetragon_monitor.py  vendor_mapping.py
src/agent_discover_scanner/reports/: layer4_report.py
tests/: test_aibom.py  test_audit_bundle.py  test_behavioral_patterns.py  test_correlator.py  test_install.sh  test_mcpfw_export.py  test_scanner.py
tests/fixtures/: autogen_safe.py  autogen_unsafe.py  clean_code.py  crewai_safe.py  crewai_unsafe.py  langchain_agents.py  langchain_js_agent.js  langgraph_workflow.py  safe_with_gateway.py  shadow_anthropic.py  shadow_openai.py  shadow_openai_js.js
