[project]
name = "agent-discover-scanner"
version = "1.1.0"
description = "Static analysis tool for detecting AI agents and Shadow AI in codebases"
authors = [
    {name = "DefendAI", email = "support@defendai.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "security", "agents", "llm", "shadow-ai", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "sarif-om>=1.0.4",
    "esprima>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Defend-AI-Tech-Inc/agent-discover-scanner"
Documentation = "https://github.com/Defend-AI-Tech-Inc/agent-discover-scanner#readme"
Repository = "https://github.com/Defend-AI-Tech-Inc/agent-discover-scanner"
Issues = "https://github.com/Defend-AI-Tech-Inc/agent-discover-scanner/issues"

[project.scripts]
agent-discover-scanner = "agent_discover_scanner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_discover_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
